--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,17 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <Button
         android:id="@+id/btnNewGame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="新游戏" />
+        android:layout_width="200dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="24dp"
+        android:text="新游戏"
+        android:textSize="22sp" />
 
     <Button
         android:id="@+id/btnLeaderboard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="排行榜" />
+        android:layout_width="200dp"
+        android:layout_height="70dp"
+        android:text="排行榜"
+        android:textSize="22sp" />
+
 </LinearLayout>
