--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- 您项目原有的颜色 -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,4 +8,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="sudoku_cell_selected_bg">#66b2eb</color>      <!-- 选中单元格的背景色 (淡蓝色) -->
+    <color name="sudoku_cell_highlighted_bg">#FFEB3B</color>    <!-- 相同数字高亮的背景色 (黄色) -->
+    <color name="sudoku_number_conflict">#D32F2F</color>          <!-- 冲突数字的颜色 (红色) -->
+    <color name="sudoku_box_background">#E8E8E8</color>
 </resources>
