--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,14 @@
         android:textSize="22sp" />
 
     <Button
+        android:id="@+id/btnMultiplayer"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="16dp"
+        android:text="联机对战"
+        android:textSize="22sp" />
+
+    <Button
         android:id="@+id/btnLeaderboard"
         android:layout_width="200dp"
         android:layout_height="70dp"
