--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,11 @@
         android:textSize="22sp" />
 
     <Button
-        android:id="@+id/btnMultiplayer"
+        android:id="@+id/btnApiGame"
         android:layout_width="200dp"
         android:layout_height="70dp"
         android:layout_marginBottom="16dp"
-        android:text="联机对战"
+        android:text="网络获取"
         android:textSize="22sp" />
 
     <Button
